--- a/frontEndWebsiteEx/index.html
+++ b/frontEndWebsiteEx/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BigOhNo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-    <h1>iClicker Login</h1>
+  <h1 class="text-3xl font-bold underline text-3xl">
+    Hello world!
+  </h1>
 </body>
 </html>
