--- a/frontEndWebsiteEx/index.html
+++ b/frontEndWebsiteEx/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tailwind CSS Example</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline text-3xl">
-    Hello world!
-  </h1>
+<body class="bg-gray-200 p-4">
+
+    <div class="container mx-auto bg-white p-8 rounded-md shadow-md">
+        <h1 class="text-2xl text-orange-700 font-bold mb-4 ">Hello, Tailwind CSS!</h1>
+        <p class="text-gray-700">This is a simple example of using Tailwind CSS.</p>
+        <button class="text-white px-4 py-2 mt-4 rounded-md hover: bg-blue-400">Click me</button>
+    </div>
+
 </body>
 </html>
